// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modules /> should display spinner 1`] = `
<div>
  <h3>
    Modules
  </h3>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;

exports[`<Modules /> should handle error on fetching modules 1`] = `
<div>
  <h3>
    Modules
  </h3>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<Modules /> should render modules 1`] = `
<div>
  <h3>
    Modules
  </h3>
  <p>
    Select modules which you want to include in the report.
  </p>
  <form
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3"
  >
    <div
      style="font-weight: bold;"
    >
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Select all
          </label>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              checked=""
              class="custom-control-input"
              id="2"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="2"
            >
              foo_module
              <small
                class="form-text text-muted"
              >
                Boo module description.
              </small>
            </label>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              checked=""
              class="custom-control-input"
              id="3"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="3"
            >
              bar_module
              <small
                class="form-text text-muted"
              >
                Bar module description.
              </small>
            </label>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              checked=""
              class="custom-control-input"
              id="4"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="4"
            >
              fizz_module
              <small
                class="form-text text-muted"
              >
                Fizz module description.
              </small>
            </label>
          </div>
        </div>
      </div>
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              checked=""
              class="custom-control-input"
              id="5"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="5"
            >
              buzz_module
              <small
                class="form-text text-muted"
              >
                Buzz module description.
              </small>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="text-right"
    >
      <button
        class="btn btn-primary  col-sm-12 col-lg-3"
        type="submit"
      >
         
         
        Generate report
      </button>
    </div>
  </form>
</div>
`;
